[component] Initialize AWS/Textract infrastructure

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,8 @@ author = Sergio Correia, Stephan Luck
 author_email = sergio.correia@gmail.com
 url = https://github.com/sergiocorreia/quipucamayoc/
 description = Tools to extract information from digitized historical documents
-long_description = file: README.md, LICENSE
+long_description_content_type = text/markdown
+long_description = file: README.md
 keywords = ocr, data extraction, tables, economic history
 license = GNU Affero General Public License v3
 classifiers =
@@ -15,13 +16,20 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.10
     Topic :: Scientific/Engineering :: Image Processing
-    Operating System :: POSIX :: Linux"
-    Operating System :: Unix"
-    Operating System :: MacOS"
-    Operating System :: Microsoft :: Windows"
+    Operating System :: POSIX :: Linux
+    Operating System :: Unix
+    Operating System :: MacOS
+    Operating System :: Microsoft :: Windows
 license_files = LICENSE
 
 [options]
 python_requires = >=3.9
+install_requires =
+    opencv-python >= 4.5.5.62
+    numpy >= 1.21.2
+    boto3 >= 1.21.1
+    click >= 8.0.3
+    Pillow >= 9.0.1
+    loguru >= 0.6.0
 zip_safe = False
 packages = find:
