--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
     "setuptools>=48",
-    "wheel"
+    "wheel",
+    "flake8"
 ]
 build-backend = "setuptools.build_meta"
-
