--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ install_requires =
     opencv-python >= 4.5.5.62
     numpy >= 1.21.2
     boto3 >= 1.21.1
+    awscli >= 1.22.84
     click >= 8.0.3
     Pillow >= 9.0.1
     loguru >= 0.6.0
