--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = quipucamayoc
-version = attr: quipucamayoc.__version__
+version = attr: quipucamayoc.version.__version__
 author = Sergio Correia, Stephan Luck
 author_email = sergio.correia@gmail.com
 url = https://github.com/sergiocorreia/quipucamayoc/
@@ -34,3 +34,7 @@ install_requires =
     loguru >= 0.6.0
 zip_safe = False
 packages = find:
+
+[options.entry_points]
+console_scripts =
+        quipu = quipucamayoc:cli
