Add windows poppler binaries
Also add another example file, and tweak setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifiers =
     License :: OSI Approved :: GNU Affero General Public License v3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering :: Image Processing
     Operating System :: POSIX :: Linux
     Operating System :: Unix
