--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
     click >= 8.0.3
     Pillow >= 9.0.1
     loguru >= 0.6.0
+    rich >= 12.3.0
 zip_safe = False
 packages = find:
 
