Interim; add dewarpnet and non-pdf processing

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,11 @@ install_requires =
     Pillow >= 9.0.1
     loguru >= 0.6.0
     rich >= 12.3.0
+
+[options.extras_require]
+dev = matplotlib >= 3.5.0
+# ; seaborn>=0.11.2
+
 zip_safe = False
 packages = find:
 
