--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,7 @@ install_requires =
     rich >= 12.3.0
 
 [options.extras_require]
-dev = matplotlib >= 3.5.0
-# ; seaborn>=0.11.2
+dev = matplotlib >= 3.5.0; hdf5storage >= 0.1.14; pytorch >= 1.12.0; scikit-image >= 0.19.2
 
 zip_safe = False
 packages = find:
