--- a/setup.cfg
+++ b/setup.cfg
@@ -25,8 +25,11 @@ license_files = LICENSE
 
 [options]
 python_requires = >=3.9
+packages = find:
+zip_safe = False
 install_requires =
-    opencv-python >= 4.5.5.62
+    opencv-contrib-python >= 4.5.5.62
+    #opencv-python >= 4.5.5.62
     numpy >= 1.21.2
     boto3 >= 1.21.1
     awscli >= 1.22.84
@@ -36,10 +39,8 @@ install_requires =
     rich >= 12.3.0
 
 [options.extras_require]
-dev = matplotlib >= 3.5.0; hdf5storage >= 0.1.14; pytorch >= 1.12.0; scikit-image >= 0.19.2
-
-zip_safe = False
-packages = find:
+dev = matplotlib >= 3.5.0; hdf5storage >= 0.1.14; torch >= 1.12; scikit-image >= 0.19.2
+jupyter = ipywidgets >= 8.0
 
 [options.entry_points]
 console_scripts =
