--- a/setup.cfg
+++ b/setup.cfg
@@ -10,12 +10,13 @@ long_description = file: README.md
 keywords = ocr, data extraction, tables, economic history
 license = GNU Affero General Public License v3
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 4 - Beta
     Environment :: Console
     License :: OSI Approved :: GNU Affero General Public License v3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Topic :: Scientific/Engineering :: Image Processing
     Operating System :: POSIX :: Linux
     Operating System :: Unix
@@ -24,7 +25,7 @@ classifiers =
 license_files = LICENSE
 
 [options]
-python_requires = >=3.9
+python_requires = >=3.10
 packages = find:
 zip_safe = False
 install_requires =
